--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/RadioButton.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/RadioButton.styl
@@ -39,7 +39,7 @@
 	//width: 15px;
 	//height: 15px;
 	icon-image(0, -36, "../", "-small", 12px, 12px);
-	margin: -1px 0 0 0;
+	margin: -1px 0.3em 0 0;
 	padding: 0;
 }
 
