--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/login.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/login.styl
@@ -154,3 +154,8 @@
 	height: 40px;
 	background: url("../images/univention.svg") no-repeat 10px 12px;
 }
+
+/* do not show the dark underlay during the login screen */
+.umc .dijitDialogUnderlayWrapper.umcBackground .dijitDialogUnderlay {
+	background: none;
+}
