--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
@@ -10,7 +10,8 @@
 
 .claro {
   font-family: Clear Sans, Arial, Helvetica, sans-serif;
-  font-size: .75em;
+  //font-size: .75em;
+  font-size: 12px;
   color: $document-text-color;
 }
 
@@ -19,14 +20,21 @@ html {
 	background: white;
 }
 
+.umc p {
+	line-height: 1.2em;
+}
+.umc p {
+
+}
+
 body.claro .umcBackground,
 body.claro {
 	/* Chrome,Safari4+ */
-	background: url(images/background-tile.png) repeat, -webkit-gradient(linear, left bottom, right top, color-stop(0%,#cdcdcd), color-stop(50%,#efefef), color-stop(100%,#cccccc));
+	background: url(images/background-tile.png) repeat, -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(179,179,179,1)), color-stop(31%, rgba(224,224,224,1)), color-stop(51%, rgba(240,240,240,1)), color-stop(61%, rgba(235,235,235,1)), color-stop(74%, rgba(224,224,224,1)), color-stop(100%, rgba(189,189,189,1)));
 	/* Chrome10+,Safari5.1+ */
-	background: url(images/background-tile.png) repeat, -webkit-linear-gradient(to right top, #cdcdcd 0%,#efefef 50%,#cccccc 100%);
+	background: url(images/background-tile.png) repeat, -webkit-linear-gradient(to right top, rgba(179,179,179,1) 0%, rgba(224,224,224,1) 31%, rgba(240,240,240,1) 51%, rgba(235,235,235,1) 61%, rgba(224,224,224,1) 74%, rgba(189,189,189,1) 100%);
 	/* W3C */
-	background: url(images/background-tile.png) repeat, unquote("linear-gradient(to right top, #cdcdcd 0%, #efefef 50%, #cccccc 100%)");
+	background: url(images/background-tile.png) repeat, unquote("linear-gradient(to right top, rgba(179,179,179,1) 0%, rgba(224,224,224,1) 31%, rgba(240,240,240,1) 51%, rgba(235,235,235,1) 61%, rgba(224,224,224,1) 74%, rgba(189,189,189,1) 100%)");
 }
 
 .dj_ie9 body.claro .umcBackground,
@@ -34,7 +42,7 @@ body.claro {
 .dj_ie9 body.claro,
 .dj_ie8 body.claro {
 	/* fallback on horizontal gradient for IE8/9 */
-	filter: unquote("progid:DXImageTransform.Microsoft.gradient(startColorstr='#efefef', endColorstr='#cccccc',GradientType=1)");
+	filter: unquote("progid:DXImageTransform.Microsoft.gradient(startColorstr='#f0f0f0', endColorstr='#b3b3b3',GradientType=1)");
 	background: #cdcdcd;
 }
 
@@ -93,8 +101,12 @@ body.claro.umcHeadless {
 }
 
 /* paragraphs, quotes and lists */
+body.umc,
 .claro p { 
-	//line-height: 1.3em;
+	line-height: 1.3em;
+}
+.claro p { 
+	margin-bottom: 0.7em;
 }
 
 /* pre and code */
