--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Common.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Common.styl
@@ -281,7 +281,7 @@ label {
 	}
 	.umcLabelPaneLabeNodeRight label {
 		display: inline-block;
-		padding: 0 1.25em 0 0.25em;
+		padding: 0 1.25em 0 0;
 	}
 }
 
