Bug #35654: * added padding for tables * fixed nested TitlePanes * link styling * adapted form element borders
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54589 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/TitlePane.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/TitlePane.styl
@@ -27,6 +27,13 @@
 	margin-top: 0;
 }
 
+.umc .dijitTitlePane .dijitTitlePane {
+	  margin-left: 3em;
+}
+.umc .dijitTitlePane .dijitTitlePane .dijitTitlePaneTitle {
+	  font-size: 1.4em;
+}
+
 .claro .dijitTitlePaneTitle {
 	//background-color: $unselected-background-color;
 	standard-gradient();
