--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
@@ -20,6 +20,18 @@ html {
 	background: white;
 }
 
+.umc td,
+.umc th {
+	padding: 0em 1em 0.3em 0em;
+}
+.umc a {
+	color: $text-color-lightest;
+	text-decoration: underline;
+}
+.umc a:hover {
+	color: $text-color;
+}
+
 .umc p {
 	line-height: 1.2em;
 }
