* [WIP] continued working on redesign of ucs-overview (Bug #36095)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54600 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/css/ucs.css
+++ b/services/univention-apache/css/ucs.css
@@ -1,3 +1,6 @@
 @import url("document.css");
 @import url("stickyfooter.css");
 @import url("categories.css");
+@import url("gallerypane.css");
+@import url("icons.css");
+@import url("header.css");
