* Bug #35654: minor adjustments for margins and padding
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54612 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/Dialog.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/Dialog.styl
@@ -40,7 +40,7 @@
 .claro .dijitDialogPaneContent {
 	background: $pane-background-color repeat-x top left;
 	border-top: 1px solid $popup-border-color;
-	padding: 1.2em;
+	padding: 1.6em 1.2em 1.2em 1.2em;
 	position: relative;
 	box-sizing: content-box;
 	max-width: 650px;
