--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Checkbox.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Checkbox.styl
@@ -37,7 +37,7 @@
 	//width: 15px;
 	//height: 16px;
 	icon-image(0, -36, "../", "-small", 12px, 12px);
-	margin: -3px 0 0 0;
+	margin: -1px 0.3em 0 0;
 	padding: 0;
 }
 
