--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/header.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/header.styl
@@ -102,7 +102,8 @@
 			//TODO: can later be removed
 			width: 100%;
 			margin-right: 0;
-			font-size: $font-size-buttons;
+			//font-size: $font-size-buttons;
+			//font-size: $font-size-medium;
 
 			.umcInlineLabel {
 				color: $text-color;
@@ -125,6 +126,7 @@
 		filter: none;
 		box-shadow: none;
 		color: $text-color;
+		font-size: $font-size-medium;
 	}
 
 	.dijitDisabled #umcMenuHost .dijitArrowButtonInner {
