* Bug #35654: added bootstrap like CSS classes col-xxs-*
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54672 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/gallerypane.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/gallerypane.styl
@@ -152,7 +152,7 @@
 }
 
 // no left/right padding for full size item
-@media (max-width: 767px) {
+@media (max-width: $xxs-max) {
 	.umcGalleryPane .umcGalleryWrapperItem {
 		padding-left: 0;
 		padding-right: 0;
