--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/claro.css
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/claro.css
@@ -1,6 +1,7 @@
 @import url("../dijit.css");
 @import url("document.css");
 @import url("bootstrap.css");
+@import url("bootstrap_xxs.css");
 /*@import url("../../icons/commonIcons.css");*//*sprite containing common icons to be used by all themes*/
 @import url("fonts.css");
 @import url("Common.css");
