--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
@@ -87,8 +87,12 @@
 
 .umc .umcPageHelpText {
 	margin-bottom: 1.5em;
-
 }
+
+.umc .umcPageNav {
+	margin-bottom: 2.5em;
+}
+
 .umc .umcPageNav .umcPageHeader:first-child h1 {
 	margin-top: 0;
 }
