* Bug #35654: appliance mode / headless styling
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54685 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/document.styl
@@ -80,18 +80,18 @@ body.claro.umcOverviewNotShown {
 }
 
 body.claro.umcHeadless {
-
 	#umcHeader,
 	#umcHeader .umcHeaderLeft {
 		height: 42px;
 	}
-	.umcModuleHeader {
-		height: 2px!important;
-		min-height: 2px!important;
-		padding-top: 0!important;
+	#umcHeader {
+		border-bottom: 2px solid $ucs-green;
 	}
-	.umcModuleHeader > div {
-		display: none;
+	.umcModuleHeader {
+		background-color: transparent!important;
+		.umcModuleTitle {
+			color: black;
+		}
 	}
 }
 
