--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/variables.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/variables.styl
@@ -10,6 +10,7 @@ $grey-medium ?= #c8c8c8;
 $grey-dark ?= #6e6e6e;
 $disabled-color ?= #d3d3d3;												// Base for disabled backgrounds and borders
 $error-color ?= #be0000;
+$ucs-green ?= #7ab51d;
 $text-color-dark-background ?= #fff;
 
 $font-size-buttons ?= 1.3em;
