--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
@@ -24,16 +24,6 @@
 		float: right;
 	}
 
-	.umcModuleHeaderSticky {
-		position: fixed;
-		top: 0;
-		font-size: 0.7em;
-		z-index: 900;
-		.umcModuleHeaderLeft {
-			padding-bottom: 0;
-		}
-	}
-
 	.dijitButton {
 		padding-top: 0.9em;
 		.dijitButtonNode {
@@ -63,6 +53,18 @@
 	}
 	.dijitButton.dijitButtonHover .dijitButtonText {
 		display: inherit;
+	}
+}
+
+body.umc:not([class~=umcHeadless]) .umcModuleHeader {
+	.umcModuleHeaderSticky {
+		position: fixed;
+		top: 0;
+		font-size: 0.7em;
+		z-index: 900;
+		.umcModuleHeaderLeft {
+			padding-bottom: 0;
+		}
 	}
 }
 
