--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/variables.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/variables.styl
@@ -32,7 +32,7 @@ $container-background-color ?= #fff;										// Backgrounds for various content
 $minor-selected-color ?= $grey-medium;						// Color for various arrows and buttons
 $base-border-color ?= #b4b4b4;		// Augmented and used directly by variables to create border colors for various widgets
 $unfocused-clickable-color ?= spin(saturate(lighten($primary-color, 5), 10), 0);				// Background color for enabled buttons, text inputs
-$border-color ?= spin(desaturate(darken($primary-color, 15), 67), 8);						// Border color for (enabled, unhovered) TextBox, Slider, Accordion, BorderContainer, TabContainer
+$border-color ?= $text-color;
 $minor-border-color ?= $disabled-color;									// Color of borders inside widgets: horizontal line in Calendar between weeks, around color swatches in ColorPalette, above Dialog action bar
 $popup-border-color ?= $base-border-color;								// Border for Dialog, Menu, Tooltip.   Must also update tooltip.png (the arrow image file) to match
 $gallery-border-color ?= #dcdcdc;
