* Bug #35654: adjust gallery pane icon margins
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54699 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/gallerypane.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/gallerypane.styl
@@ -80,19 +80,16 @@
 		}
 
 		.umcGalleryIcon {
-			margin: 5px 0 0 5px;
-			padding-bottom: 0;
-//			position: absolute;
-//			visibility: hidden;
-//			display: none;
-			height: 70px;
+			height: 90px;
+			width: 80px;
 			float: left;
+			background-position: center center;
 		}
 
 		/* if an icon is present, set a margin to the text elements */
 		.umcGalleryIcon + .umcGalleryName,
 		.umcGalleryIcon + .umcGalleryName + .umcGalleryDescription {
-			margin-left: 65px;
+			margin-left: 85px;
 		}
 
 		.umcGalleryStatusIcon {
