Bug #35654: fix module search label
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54759 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/header.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/header.styl
@@ -80,10 +80,12 @@
 	.dijitDropDownButton[widgetid=umcMenuHost],
 	.dijitDropDownButton[widgetid=umcMenuUsername] {
 		display: inline-block;
+		text-align: left;
 	}
 
 	.umcLiveSearchSidebar {
 		float: right;
+		text-align: left;
 		margin-bottom: 1em;
 		//marign-top: 0.25em;
 		.dijitTextBox {
